package com.example.psoft_aisafe.model.enums;

/**
 *  Enum of possible valid types of contacts
 */

public enum ContactType {
    PHONE,
    EMAIL,
    FAX,
    RADIO
}
