package psoft_aisafe.model.classes;

public class RunwayInfo {
}
